--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,3 @@
-/* GENERAL */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
 /* HEADER */
 
 header {
@@ -43,6 +31,14 @@ main {
   width: calc(100% / 10);
   background-color: blue;
   border: 2px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.square span {
+  display: none;
 }
 
 /* FOOTER */
