--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,3 +9,9 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
